--- a/core/templates/core/tasks_all.html
+++ b/core/templates/core/tasks_all.html
@@ -17,7 +17,7 @@
             <div>
                 <div class="task-container-titles">
                     <div>
-                        <a style="text-decoration: none;" href="{% url 'tasks-detail' task.id %}">{{ task.title }}</a>
+                        <a style="text-decoration: none;" href="{% url 'tasks-detail' username task.id %}">{{ task.title }}</a>
                         
                     </div>
 
