--- a/core/templates/core/tasks_all.html
+++ b/core/templates/core/tasks_all.html
@@ -27,7 +27,7 @@
                 </div>
 
                 <div class="task-container-info">
-                    Active Todos {{ task.todos.count }}
+                    Active Todos: {{ task.todos.count }}
                 </div>
 
 
