Filter Done Todos

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -82,6 +82,18 @@
 
 
     <main>
+
+        <div class="row">
+            <div class="col-md-8">
+              {% if messages %}
+                  {% for message in messages %}
+                      <div class="alert alert-{{ message.tags }}">
+                          {{ message }}
+                      </div>
+                  {% endfor %}
+              {% endif %}
+            </div>  
+        </div>
         {% block content %}
 
         {% endblock %}
