--- a/core/templates/core/tasks_detail.html
+++ b/core/templates/core/tasks_detail.html
@@ -29,8 +29,13 @@
 
 </div>
 <div class="grid-container">
-    {% for todo in todos %}
+    {% for todo in todos %} 
+
+    {% if todo.is_finished %}
+    <div class="container" style="border-color: green;">
+    {% else %}
     <div class="container">
+    {% endif %}
         <div class="title">
             <div style="display: flex; align-items: center;">
                 <div class="title-info">
@@ -44,9 +49,31 @@
                 </div>
                 {% endif %}
             </div>
+            {% if todo.is_finished %}
+            <div style="display: flex; align-items: center; width: 100px; justify-content: space-between;">
+                
+
+                <div class="title-time">
+                    {{ todo.time_created|date:"h:i A" }}
+                </div>
+
+                <div>
+                    <img src="{% get_media_prefix %}accept.png" class="finished">
+                </div>
+                
+           
+
+            
+
+            </div>
+            {% else %}
+
             <div class="title-time">
                 {{ todo.time_created|date:"h:i A" }}
             </div>
+
+
+            {% endif %}
         </div>
        
         <div>
