--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type='text/css' href="{% static 'core/header.css' %}"">
+    <link rel="stylesheet" type='text/css' href="{% static 'core/header.css' %}">
     <link rel="stylesheet" type='text/css' href="{% static 'core/main.css' %}">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -54,8 +54,22 @@
 
             <div>
                 <a href="{% url 'add-task' %}">
-                    New Todo
+                    New Task
                 </a>
+
+            </div>
+
+
+            <div class="tasks-counter-div">
+                <div  class="tasks-counter">
+                    {{ user.tasks.count }}
+                </div>
+
+                <a href="{% url 'tasks' user.username %}" id="mytasks">
+                    My Tasks
+                </a>
+
+            </div>
 
             {% else %}
             <div>
@@ -82,18 +96,7 @@
 
 
     <main>
-
-        <div class="row">
-            <div class="col-md-8">
-              {% if messages %}
-                  {% for message in messages %}
-                      <div class="alert alert-{{ message.tags }}">
-                          {{ message }}
-                      </div>
-                  {% endfor %}
-              {% endif %}
-            </div>  
-        </div>
+    
         {% block content %}
 
         {% endblock %}
