--- a/core/templates/core/tasks_all.html
+++ b/core/templates/core/tasks_all.html
@@ -8,7 +8,7 @@
 <div style="padding-left: 30px;">
     <div style="display: flex; justify-content: center;">
         <div class="content-title">
-            My tasks
+            {{ username }}' Tasks
         </div>
     </div>
     <div class="tasks-content">
@@ -17,9 +17,16 @@
         
             <div>
                 <div class="task-container-titles">
-                    <div>
-                        <a style="text-decoration: none;" href="{% url 'tasks-detail' username task.id %}">{{ task.title }}</a>
-                        
+                    <div style="display: flex; align-items: center;">
+                        <div>
+                            <a style="text-decoration: none;" href="{% url 'tasks-detail' username task.id %}">{{ task.title }}</a>
+                            
+                        </div>
+                        {% if not task.is_public %}
+                        <div style="display: flex; align-items: center; margin-left: 5px;">
+                            <img src="{% get_media_prefix %}lock.png" style="width: 20px;">
+                        </div>
+                        {% endif %}
                     </div>
 
                     <div>
