--- a/core/static/core/main.css
+++ b/core/static/core/main.css
@@ -9,6 +9,7 @@ p{
 
 body{
     padding-left: 340px;
+    padding-right: 20px;
 }
 
 .container {
@@ -16,7 +17,7 @@ body{
     min-height: 250px;
     background-color: white;
     border-color: rgba(177, 35, 177, 0.6);
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     border-style: solid;
     border-width: 3px;
     border-radius: 12px;
@@ -44,7 +45,7 @@ body{
 .grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    column-gap: 20px;
+    column-gap: 30px;
     row-gap: 40px;
 }
 
@@ -214,6 +215,7 @@ body{
     padding: 8px 12px;
     cursor: pointer;
     border-radius: 4px;
+    transition: background-color 0.15s;
 
 }
 
