--- a/core/static/core/tasks_all.css
+++ b/core/static/core/tasks_all.css
@@ -1,19 +1,54 @@
 .tasks-content {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
 }
 
 .task-container {
-    width: 450px;
+    width: 100%;
+    padding: 20px 30px;
+    border-radius: 20px;
+    max-width: 600px;
+    min-width: 400px;
     margin-bottom: 50px;
-    padding-bottom: 5px;
-    border-bottom-width: 2px;
-    border-bottom-style: solid;
-    border-bottom-color: rgba(122, 117, 117, 0.4);
-    margin-bottom: 40px
-    
+    padding-bottom: 15px;
+    color: rgba(177, 35, 177, 0.9);
+    cursor: pointer;
+    border-width: 4px;
+    border-style: solid;;
+    margin-bottom: 40px;
+    background-color: white;
+    border-color: rgba(177, 35, 177, 0.9);
+    transition: background-color 0.15s;
 }
+
+.task-time {
+    color: rgb(127, 113, 113); 
+    font-weight: 600;
+}
+
+.task-container:hover {
+    background-color: rgba(177, 35, 177, 1);
+    color: white;
+}
+
+
+
+#task-title {
+    color: rgba(177, 35, 177, 0.9);
+    font-size: 24px;
+}
+
+
+.task-container:hover #task-title  {
+    color: white;
+}
+
+.task-container:hover .task-time  {
+    color: white;
+}
+
 
 body {
     padding-left: 0;
@@ -21,6 +56,7 @@ body {
 .task-container-titles {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-bottom: 15px;
 
 }
@@ -39,4 +75,8 @@ body {
 
 .task-container-info {
     font-weight: bold;
+}
+
+.delete-img {
+    width: 24px;
 }
