--- a/core/templates/core/task_confirm_delete.html
+++ b/core/templates/core/task_confirm_delete.html
@@ -1,10 +1,34 @@
 {% extends 'core/base.html' %}
+{% load crispy_forms_tags %}
+
+{% block styles %}
+<style>
+    p {
+        padding: 0;
+        font-size: 30px;
+        text-align: center;
+    }
+
+    body {
+        padding-left: 0;
+    }
+
+    .confirm-delete {
+        padding: 10px 15px;
+        
+    }
+</style>
+{% endblock %}
 
 
 {% block content %}
-<form method="post">{% csrf_token %}
-    <p>Are you sure you want to delete "{{ object }}"?</p>
-    {{ form }}
-    <input type="submit" value="Confirm">
-</form>
+<div style="display: flex; justify-content: center;">
+    
+    <form method="post" style="display: flex; flex-direction: column; align-items: center;">
+        {% csrf_token %}
+        <p>Are you sure you want to delete "{{ object }}"?</p>
+
+        <input type="submit" value="Confirm" class="confirm-delete">
+    </form>
+</div>
 {% endblock %}
