--- a/core/templates/core/tasks_all.html
+++ b/core/templates/core/tasks_all.html
@@ -41,7 +41,7 @@
         
             <div>
                 <div class="task-container-titles">
-                    <div style="display: flex; align-items: center;">
+                    <div style="display: flex; align-items: center; margin-right: 10px;">
                         <div>
                             <a id="task-title" href="{% url 'tasks-detail' username task.id %}">
                                 {{ task.title }}
