--- a/core/static/core/home.css
+++ b/core/static/core/home.css
@@ -1,6 +1,7 @@
 body {
     padding-left: 0;
     padding-top: 0;
+    padding-right: 0;
     padding-bottom: 100px;
 }
 
@@ -99,11 +100,10 @@ body {
 
 .already-account-title {
     margin-bottom: 40px;
-   
     font-size: 50px;
     font-weight: bold;
     padding-bottom: 5px;
-
+    text-align: center;
     border-bottom-width: 2px;
     border-bottom-style: solid;
     border-bottom-color: rgba(122, 117, 117, 0.4)
