--- a/core/static/core/tasks_all.css
+++ b/core/static/core/tasks_all.css
@@ -37,6 +37,7 @@
 
 #task-title {
     color: rgba(177, 35, 177, 0.9);
+    font-weight: bold;
     font-size: 24px;
 }
 
@@ -58,6 +59,7 @@ body {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 15px;
+    
 
 }
 
