--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -8,6 +8,9 @@
     <title>Document</title>
     <link rel="stylesheet" type='text/css' href="{% static 'core/header.css' %}">
     <link rel="stylesheet" type='text/css' href="{% static 'core/main.css' %}">
+    <link rel="stylesheet" type='text/css' href="{% static 'core/tasks_all.css' %}">
+
+
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
@@ -41,7 +44,7 @@
            
             {% if user.is_authenticated %}
             <div>
-                <a href="#">
+                <a href="{% url 'profile' user.username %}">
                     Profile
                 </a>
             </div>
