--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -5,10 +5,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TodoApp</title>
     <link rel="stylesheet" type='text/css' href="{% static 'core/header.css' %}">
+
     <link rel="stylesheet" type='text/css' href="{% static 'core/main.css' %}">
-    <link rel="stylesheet" type='text/css' href="{% static 'core/tasks_all.css' %}">
 
 
 
