--- a/core/templates/core/task_confirm_delete.html
+++ b/core/templates/core/task_confirm_delete.html
@@ -1,34 +1,19 @@
 {% extends 'core/base.html' %}
 {% load crispy_forms_tags %}
+{% load static %}
 
 {% block styles %}
-<style>
-    p {
-        padding: 0;
-        font-size: 30px;
-        text-align: center;
-    }
-
-    body {
-        padding-left: 0;
-    }
-
-    .confirm-delete {
-        padding: 10px 15px;
-        
-    }
-</style>
+    <link rel="stylesheet" type='text/css' href="{% static 'core/confirm_delete.css' %}">
 {% endblock %}
 
-
 {% block content %}
-<div style="display: flex; justify-content: center;">
+<div class="delete-container">
     
-    <form method="post" style="display: flex; flex-direction: column; align-items: center;">
+    <form method="post" class="delete-form">
         {% csrf_token %}
-        <p>Are you sure you want to delete "{{ object }}"?</p>
+        <p>Are you sure you want to delete Task "{{ object }}"?</p>
 
-        <input type="submit" value="Confirm" class="confirm-delete">
+        <input type="submit" value="Confirm" class="delete-btn">
     </form>
 </div>
 {% endblock %}
