--- a/core/static/core/main.css
+++ b/core/static/core/main.css
@@ -13,7 +13,7 @@ p{
     text-decoration: none;
     min-height: 250px;
     background-color: white;
-    border-color: rgba(177, 35, 177, 0.6);
+    border-color: rgba(177, 35, 177, 0.8);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     border-style: solid;
     border-width: 3px;
@@ -275,4 +275,29 @@ p{
 .delete-btn:hover {
     color: white;
     background-color: rgb(232, 49, 49);
+}
+
+
+.grid-container-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+
+.finished-todo-title-container {
+    width: 100%;
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
+   
+}
+
+
+.finished-todo-title {
+     margin-bottom: 15px;
+    border-bottom-width: 2px;
+    border-bottom-color:rgba(177, 35, 177, 0.6);
+    border-bottom-style: solid;
+    padding-bottom: 5px;
 }
