--- a/core/templates/core/tasks_detail.html
+++ b/core/templates/core/tasks_detail.html
@@ -10,7 +10,8 @@
 </style>
 {% endblock %}
 {% block content %}
-    {% if created_by == request.user and not task.is_finished %}
+{% if created_by == request.user and not task.is_finished %}
+    
     <div class="add-container">
         <div style="position: relative;">
             <a href="{% url 'add-todo' task.id %}" class="add-btn">
@@ -24,7 +25,7 @@
         
         </div>
     </div>
-    {% endif %}
+{% endif %}
 
         
 
@@ -60,64 +61,127 @@
     </div>
 
 </div>
-<div class="grid-container">
-    {% for todo in todos %} 
+{% if todos %}
+<div class="grid-container-container">
 
-    {% if todo.is_finished %}
-    <div class="container" style="border-color: green;">
-    {% else %}
-    <div class="container">
-    {% endif %}
-        <div class="title">
-            <div style="display: flex; align-items: center;">
-                <div class="title-info">
-                    Todo
+
+
+     <div class="finished-todo-title-container">
+        <div class="finished-todo-title">
+            Finished Todos
+        </div>
+    </div>
+
+    <div class="grid-container">
+        {% for todo in todos %} 
+
+        {% if todo.is_finished %}
+        <div class="container" style="border-color: green;">
+      
+       
+            <div class="title">
+                <div style="display: flex; align-items: center;">
+                    <div class="title-info">
+                        Todo
+                    </div>
+                    {% if user == todo.task.created_by %}
+                    <div>
+                        <a href="{% url 'todo-detail' user.username todo.task.id todo.id %}" class="edit-img-div">
+                            <img src="{% get_media_prefix %}edit.png" class="edit-img">
+                        </a>    
+                    </div>
+                    {% endif %}
                 </div>
-                {% if user == todo.task.created_by %}
-                <div>
-                    <a href="{% url 'todo-detail' user.username todo.task.id todo.id %}" class="edit-img-div">
-                        <img src="{% get_media_prefix %}edit.png" class="edit-img">
-                    </a>    
+                {% if todo.is_finished %}
+                <div style="display: flex; align-items: center; width: 130px; justify-content: flex-end;">
+                    
+
+                    <div class="title-time" style="text-wrap: nowrap; margin-right: 5px;">
+                        {{ todo.time_created|date:"F j" }}
+                    </div>
+
+                    <div>
+                        <img src="{% get_media_prefix %}accept.png" class="finished">
+                    </div>
+                
                 </div>
+             
                 {% endif %}
             </div>
-            {% if todo.is_finished %}
-            <div style="display: flex; align-items: center; width: 100px; justify-content: space-between;">
-                
+        
+            <div>
+                <p class="todo-text">
+                    {{ todo.content }}
+                </p>
+            </div>
 
-                <div class="title-time">
-                    {{ todo.time_created|date:"h:i A" }}
-                </div>
 
-                <div>
-                    <img src="{% get_media_prefix %}accept.png" class="finished">
-                </div>
-                
+        </div>
+        {% endif %}
+        {% endfor %}
         
 
-            
-
-            </div>
-            {% else %}
-
-            <div class="title-time">
-                {{ todo.time_created|date:"h:i A" }}
-            </div>
+    </div>
 
 
-            {% endif %}
+    <div class="finished-todo-title-container">
+        <div class="finished-todo-title">
+            Unfinished Todos
         </div>
-    
-        <div>
-            <p class="todo-text">
-                {{ todo.content }}
-            </p>
-        </div>
+    </div>
 
+    <div class="grid-container">
+        {% for todo in todos %} 
+
+        {% if not todo.is_finished %}
+        <div class="container">
+      
+       
+            <div class="title">
+                <div style="display: flex; align-items: center;">
+                    <div class="title-info">
+                        Todo
+                    </div>
+                    {% if user == todo.task.created_by %}
+                    <div>
+                        <a href="{% url 'todo-detail' user.username todo.task.id todo.id %}" class="edit-img-div">
+                            <img src="{% get_media_prefix %}edit.png" class="edit-img">
+                        </a>    
+                    </div>
+                    {% endif %}
+                </div>
+                
+                <div style="display: flex; align-items: center; width: 100px; justify-content: flex-end;">
+                    
+
+                    <div class="title-time">
+                        {{ todo.time_created|date:"F j" }}
+                    </div>
+
+                    
+
+                </div>
+        
+
+                
+            </div>
+        
+            <div>
+                <p class="todo-text">
+                    {{ todo.content }}
+                </p>
+            </div>
+
+
+        </div>
+        {% endif %}
+        {% endfor %}
+        
 
     </div>
-    {% endfor %}
-    
 
+    
 </div>
+
+{% endif %}
 {% endblock %}
