--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -67,7 +67,7 @@
             <div class="tasks-counter-div">
                 {% with tasks_count=user.tasks.all|filter_task %}
                 {% if tasks_count %}
-                <div  class="tasks-counter">
+                <div  class="tasks-counter js-task-count">
                     {{ tasks_count }}
                 </div>
                 
@@ -118,5 +118,7 @@
             event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
         })
     </script>
+
+    <script src="{% static 'core/script/update-task.js' %}"></script>
 </body>
 </html>
