--- a/core/templates/core/partials/tasks_all_partial.html
+++ b/core/templates/core/partials/tasks_all_partial.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% load todo_active_filter %}
 
-{% for task in tasks %}
+{% for task in page_obj %}
         <div class="task-container">
         
             <div>
@@ -40,7 +40,7 @@
                         </div>
 
                         <div>
-                            <a hx-delete="{% url 'delete-htmx' task.id %}" hx-target="#task-list">
+                            <a hx-delete="{% url 'delete-htmx' task.id %}" hx-target="#task-list" hx-push-url="/{{ created_by.username }}/tasks/?page=1" class="js-delete-task" onclick="updateTaskCount();">
                                 <img src="{% get_media_prefix %}bin.png" class="delete-img">
                             </a>
                         </div>
@@ -51,3 +51,32 @@
             </div>
         </div>
 {% endfor %}
+
+
+
+
+<div>
+    <div style="display: flex; justify-content: space-between;">
+    {% if page_obj.has_previous %}
+    <a class = "btn btn-outline-success mb-4 paginator" href="?page=1">First</a>
+    <a class = "btn btn-outline-success mb-4 paginator" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+
+    {% endif %}
+
+    {% for num in page_obj.paginator.page_range %}
+        {% if page_obj.number == num %}
+
+            <a class = "btn btn-success mb-4 paginator" href="?page={{ num }}">{{ num }}</a>
+        {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+            <a class = "btn btn-outline-success mb-4 paginator" href="?page={{ num }}">{{ num }}</a>
+        {% endif %}
+    {% endfor %}
+
+    {% if page_obj.has_next %}
+    <a class = "btn btn-outline-success mb-4 paginator" href="?page={{ page_obj.next_page_number }}">Next</a>
+    <a class = "btn btn-outline-success mb-4 paginator" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+
+    {% endif %}
+    </div>
+
+
