--- a/core/templates/core/tasks_detail.html
+++ b/core/templates/core/tasks_detail.html
@@ -2,9 +2,10 @@
 {% load static %}
 {% block styles %}
 <style>
-    body{
-    padding-left: 340px;
-    padding-right: 20px;
+
+    body {
+        padding-left: 340px;
+        padding-right: 20px;
     }
 
 </style>
@@ -76,7 +77,7 @@
         {% for todo in todos %} 
 
         {% if todo.is_finished %}
-        <div class="container" style="border-color: green;">
+        <div class="container" style="border-color: green; width: 230px;">
       
        
             <div class="title">
@@ -93,7 +94,7 @@
                     {% endif %}
                 </div>
                 {% if todo.is_finished %}
-                <div style="display: flex; align-items: center; width: 130px; justify-content: flex-end;">
+                <div style="display: flex; align-items: center; justify-content: flex-end;">
                     
 
                     <div class="title-time" style="text-wrap: nowrap; margin-right: 5px;">
@@ -109,10 +110,9 @@
                 {% endif %}
             </div>
         
-            <div>
-                <p class="todo-text">
-                    {{ todo.content }}
-                </p>
+            <div class="todo-text">
+                {{ todo.content }}
+
             </div>
 
 
@@ -134,7 +134,7 @@
         {% for todo in todos %} 
 
         {% if not todo.is_finished %}
-        <div class="container">
+        <div class="container" style="width: 230px;">
       
        
             <div class="title">
@@ -151,7 +151,7 @@
                     {% endif %}
                 </div>
                 
-                <div style="display: flex; align-items: center; width: 100px; justify-content: flex-end;">
+                <div style="display: flex; align-items: center; justify-content: flex-end;">
                     
 
                     <div class="title-time">
