add interactive design to todos page via htmx

--- a/core/templates/core/tasks_detail.html
+++ b/core/templates/core/tasks_detail.html
@@ -63,124 +63,8 @@
 
 </div>
 {% if todos %}
-<div class="grid-container-container">
-
-
-
-     <div class="finished-todo-title-container">
-        <div class="finished-todo-title">
-            Finished Todos
-        </div>
-    </div>
-
-    <div class="grid-container">
-        {% for todo in todos %} 
-
-        {% if todo.is_finished %}
-        <div class="container" style="border-color: green; width: 230px;">
-      
-       
-            <div class="title">
-                <div style="display: flex; align-items: center;">
-                    <div class="title-info">
-                        Todo
-                    </div>
-                    {% if user == todo.task.created_by %}
-                    <div>
-                        <a href="{% url 'todo-detail' user.username todo.task.id todo.id %}" class="edit-img-div">
-                            <img src="{% get_media_prefix %}edit.png" class="edit-img">
-                        </a>    
-                    </div>
-                    {% endif %}
-                </div>
-                {% if todo.is_finished %}
-                <div style="display: flex; align-items: center; justify-content: flex-end;">
-                    
-
-                    <div class="title-time" style="text-wrap: nowrap; margin-right: 5px;">
-                        {{ todo.time_created|date:"F j" }}
-                    </div>
-
-                    <div>
-                        <img src="{% get_media_prefix %}accept.png" class="finished">
-                    </div>
-                
-                </div>
-             
-                {% endif %}
-            </div>
-        
-            <div class="todo-text">
-                {{ todo.content }}
-
-            </div>
-
-
-        </div>
-        {% endif %}
-        {% endfor %}
-        
-
-    </div>
-
-
-    <div class="finished-todo-title-container">
-        <div class="finished-todo-title">
-            Unfinished Todos
-        </div>
-    </div>
-
-    <div class="grid-container">
-        {% for todo in todos %} 
-
-        {% if not todo.is_finished %}
-        <div class="container" style="width: 230px;">
-      
-       
-            <div class="title">
-                <div style="display: flex; align-items: center;">
-                    <div class="title-info">
-                        Todo
-                    </div>
-                    {% if user == todo.task.created_by %}
-                    <div>
-                        <a href="{% url 'todo-detail' user.username todo.task.id todo.id %}" class="edit-img-div">
-                            <img src="{% get_media_prefix %}edit.png" class="edit-img">
-                        </a>    
-                    </div>
-                    {% endif %}
-                </div>
-                
-                <div style="display: flex; align-items: center; justify-content: flex-end;">
-                    
-
-                    <div class="title-time">
-                        {{ todo.time_created|date:"F j" }}
-                    </div>
-
-                    
-
-                </div>
-        
-
-                
-            </div>
-        
-            <div>
-                <p class="todo-text">
-                    {{ todo.content }}
-                </p>
-            </div>
-
-
-        </div>
-        {% endif %}
-        {% endfor %}
-        
-
-    </div>
-
-    
+<div class="grid-container-container" id="todo-contain">
+    {% include 'core/partials/generate-todos.html' %}
 </div>
 
 {% endif %}
